# ncnn-android-yolov8

./: README.md  gradle.properties  settings.gradle
.github/workflows/: release-apk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov8m_cls.ncnn.param  yolov8m_obb.ncnn.param  yolov8m_oiv7.ncnn.param  yolov8m_pose.ncnn.param  yolov8m_seg.ncnn.param  yolov8s_cls.ncnn.param  yolov8s_obb.ncnn.param  yolov8s_oiv7.ncnn.param  yolov8s_pose.ncnn.param  yolov8s_seg.ncnn.param
app/src/main/java/com/tencent/yolov8ncnn/: MainActivity.java  YOLOv8Ncnn.java
app/src/main/jni/: CMakeLists.txt  yolov8_cls.cpp  yolov8_det.cpp  yolov8_obb.cpp  yolov8_pose.cpp  yolov8_seg.cpp  yolov8ncnn.cpp
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
